[package]
name = "potion_panic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs_ldtk = { version = "0.6", features = ["atlas"]}
bevy_pixel_camera = "0.4"
bevy_rapier2d = { version = "0.21", features = [ "simd-stable", "debug-render-2d" ] }
bevy_kira_audio = { version = "0.15", features = ["wav"] }
image = "0.24"
winit = { version = "0.28", default-features = false, optional = true }
stdweb = { version = "0.4", optional = true }

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "filesystem_watcher",
    "tonemapping_luts",
]

[features]
default = ["native"]
native = ["winit"]
browser = ["stdweb"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
